feat: add fetch pointage endpoint
