# backend/swagger.yaml
@@ -195,3 +195,31 @@ paths:
             responses:
                 "200":
                     description: Supprimé
+
+    /pointage:
+        get:
+            tags:
+                - Pointages
+            summary: Liste des pointages
+            security:
+                - bearerAuth: []
+            responses:
+                "200":
+                    description: OK
+
+    /pointage/{id}:
+        get:
+            tags:
+                - Pointages
+            summary: Obtenir un pointage
+            security:
+                - bearerAuth: []
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                      type: string
+            responses:
+                "200":
+                    description: OK
